# partaker

./: .gitignore  COMPLETE_WORKFLOW_FLOWCHART.md  ND2_Segmentation.ipynb  README.md  SOP.md  pyproject.toml  requirements.txt
docs/: WINDOWS.md  index.md
notebooks/: Laurens_Plots.ipynb  ND2_Merge.ipynb  ND2_Segmentation.ipynb  example_tracking_pipeline-features(1).ipynb  k-means.ipynb  nd2_merger.ipynb  registration_test.ipynb
src/: biofilm_analysis_config.json  experiment.py  image_data.py  image_functions.py  main.py  main.spec  metrics_service.py  morphology.py  nd2_favicon.icns  partaker_config.json  segmentation.py  tracking.py  ui.py  unet_segmentation.ipynb
src/nd2_analyzer/analysis/: metrics_service.py
src/nd2_analyzer/ui/: app.py
src/nd2_analyzer/ui/widgets/: population.py
src/segmentation/: segmentation_cache.py  segmentation_models.py
src/ui/: app.py  colony_separator.py
src/ui/biofilms/: analysis_mode.py  colony_analysis.py  colony_separator.py  colony_time_series_exporter.py  cube_analysis.py
src/ui/biofilms/config/: biofilm_config.py
src/ui/dialogs/: __init__.py  colony_roi_selector.py  experiment.py  mode_selection_dialog.py  tiff_type_dialog.py
src/ui/widgets/: __init__.py  density_animation.py  motility_widget.py  segmentation.py  tracking_manager.py  tracking_widget.py  view_area.py
