[project]
name = "nd2-timelapse-analyzer"
version = "0.1.0"
description = ""
authors = [
    {name = "Henrique Hiram"}
]
license = {text = "LGPL"}
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pyside6 (==6.7.2)",
    "tensorflow (>=2.13.0,<2.16.0) ; platform_system != 'Darwin' and platform_system != 'Windows'",
    "tensorflow-macos (==2.15) ; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "tensorflow-intel (>=2.13.0,<2.16.0) ; platform_system == 'Windows'",
    "tensorflow-io-gcs-filesystem (>=0.23.1) ; platform_machine != 'arm64' or platform_system != 'Darwin'",
    "tensorflow-io-gcs-filesystem (<0.32.0) ; platform_system == 'Windows'",
    "polars (>=1.30.0,<2.0.0)",
    "nd2 (>=0.10.3,<0.11.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "keras-applications (==1.0.8)",
    "imageio (>=2.37.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pypubsub (>=4.0.3,<5.0.0)",
    "cachier (>=3.1.2,<4.0.0)",
    "omnipose (>=1.0.6,<2.0.0)",
    "scipy (==1.11.4)",
    "torch (>=2.7.0,<3.0.0)",
    "natsort (>=8.4.0,<9.0.0)",
    "vulture (>=2.14,<3.0)",
    "cellpose (>=4.0.6,<5.0.0)",
    "av (>=15.0.0,<16.0.0)",
    "imageio-ffmpeg (>=0.6.0,<0.7.0)",
    "numba (>=0.61.2,<0.62.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
