[project]
name = "nd2-timelapse-analyzer"
version = "0.1.0"
description = ""
authors = [{ name = "Henrique Hiram" }]
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = { text = "LGPL" }
dependencies = [
    "pyside6 (==6.7.2)",
    # --- >>> PLATFORM-SPECIFIC TENSORFLOW (THIS BLOCK IS THE FIX) <<<
    # Windows, Linux: regular tensorflow
    "tensorflow (>=2.13.0,<2.16.0) ; platform_system != 'Darwin' and platform_system != 'Windows'",
    # Mac ARM (Apple Silicon)
    "tensorflow-macos (==2.15) ; platform_system == 'Darwin' and platform_machine == 'arm64'",
    # Mac Intel (if you ever use Intel Mac)
    "tensorflow-macos (==2.15) ; platform_system == 'Darwin' and platform_machine != 'arm64'",
    # Windows: Intel/AMD optimized
    "tensorflow-intel (>=2.13.0,<2.16.0) ; platform_system == 'Windows'",
    # Tensorflow IO GCS filesystem for non-Mac-ARM
    "tensorflow-io-gcs-filesystem (>=0.23.1) ; platform_machine != 'arm64' or platform_system != 'Darwin'",
    # (Old) Windows: keep compatibility version
    "tensorflow-io-gcs-filesystem (<0.32.0) ; platform_system == 'Windows'",
    # --- >>> END OF PLATFORM-SPECIFIC BLOCK <<<
    "polars (>=1.30.0,<2.0.0)",
    "nd2 (>=0.10.3,<0.11.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "keras-applications (==1.0.8)",
    "imageio (>=2.37.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pypubsub (>=4.0.3,<5.0.0)",
    "cachier (>=3.1.2,<4.0.0)",
    "omnipose (>=1.0.6,<2.0.0)",
    "scipy (==1.11.4)",
    "torch (>=2.7.0,<3.0.0)",
    "natsort (>=8.4.0,<9.0.0)",
    "vulture (>=2.14,<3.0)",
    "cellpose (>=4.0.6,<5.0.0)",
    "av (>=15.0.0,<16.0.0)",
    "imageio-ffmpeg (>=0.6.0,<0.7.0)",
    "numba (>=0.61.2,<0.62.0)",
    "seaborn>=0.13.2",
    "pyarrow>=21.0.0",
]

[project.gui-scripts]
gui = "nd2_analyzer:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nd2_analyzer"]
